update index.html update styles.css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <body>
     <header>
       <nav>
-        <img class="menu" src="icons/ic_menu.svg">
+        <div class="menu-burger">
+          <img src="icons/ic_menu.svg">
+        </div>
       </nav>
     </header>
     <main>
       <section class="homepage">
-        <div class="text">
+        <div class="container">
           <h1>
             Johnson Macharia
           </h1>
@@ -26,7 +28,7 @@
             Hello! I am a software developer! I can help you build a product, feature or website. Take a look at my work. <br><br>
             If you like what you see and have a project you need coded, don’t hesitate to contact me.
           </p>
-          <button type="submit" class="collaboration">
+          <button type="button" class="collaboration">
            Start collaboration
           </button>
         </div>
