Update index.html Update styles.css Add project preview images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,86 @@
            Start collaboration
           </button>
         </div>
-        <div class="image1">
+        <div class="image1"></div>
+      </section>
+
+      <section>
+        <div class="projects-container">
+
+          <h1>Projects</h1>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21.png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21 (1).png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21 (2).png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21 (3).png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21 (4).png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img class="preview" src="icons/Rectangle 21 (5).png">
+            <div class="project-infor">
+              <p class="project-name">Project name goes here</p>
+              <ul class="tech-list">
+                <li>html/css</li>
+                <li>Ruby on Rails</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
 
         </div>
       </section>
