--- a/index.html
+++ b/index.html
@@ -42,73 +42,102 @@
           <div class="project-card">
             <img class="preview" src="icons/Rectangle 21.png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
-
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
-          <div class="project-card">
+          <div class="project-card1">
             <img class="preview" src="icons/Rectangle 21 (1).png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
-          <div class="project-card">
+          <div class="project-card2">
             <img class="preview" src="icons/Rectangle 21 (2).png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
-          <div class="project-card">
+          <div class="project-card3">
             <img class="preview" src="icons/Rectangle 21 (3).png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
-          <div class="project-card">
+          <div class="project-card4">
             <img class="preview" src="icons/Rectangle 21 (4).png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
-          <div class="project-card">
+          <div class="project-card5">
             <img class="preview" src="icons/Rectangle 21 (5).png">
             <div class="project-infor">
-              <p class="project-name">Project name goes here</p>
+              <p class="project-name">
+                Project name goes here
+              </p>
               <ul class="tech-list">
                 <li>html/css</li>
                 <li>Ruby on Rails</li>
                 <li>JavaScript</li>
               </ul>
+              <p class="see-project">
+                See this project
+              </p>
             </div>
           </div>
 
