Update my html Update my css

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <div class="image1"></div>
       </section>
 
-      <section>
-        <div class="projects-container">
+      <section class="projects-container">
 
           <h1>Projects</h1>
 
@@ -140,9 +139,147 @@
               </p>
             </div>
           </div>
-
-        </div>
       </section>
+
+      <section class="about-me-container">
+        <div>
+          <h1 class="heading2">
+            About
+          </h1>
+          <p class="description">
+            I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+          </p>
+
+          <button type="button" class="cv-button">
+            Get my CV
+          </button>
+        </div>
+      <article class="knowledge-container">
+        <div class="language">
+          <h3>Languages</h3>
+          <ul>
+            <li>
+              JavaScript (ES5/ES6)
+            </li>
+            <li>
+              Ruby
+            </li>
+            <li>
+              HTML
+            </li>
+            <li>
+              CSS
+            </li>
+          </ul>
+        </div>
+
+        <div class="frameworks">
+          <h3>Frameworks</h3>
+          <ul>
+            <li>
+              React.js
+            </li>
+            <li>
+              Ruby on rails
+            </li>
+            <li>
+              RSpec
+            </li>
+            <li>
+              Capibara
+            </li>
+          </ul>
+        </div>
+
+        <div class="skills">
+          <h3>Skills</h3>
+          <ul>
+            <li>
+              Database Management
+            </li>
+            <li>
+              CLI
+            </li>
+            <li>
+              API Design
+            </li>
+            <li>
+              Version Control
+            </li>
+            <li>
+              Web Development
+            </li>
+          </ul>
+        </div>
+      </article>
+      <section class="contact-me">
+          <h1 class="getstarted">
+            Get started
+          </h1>
+          <p class="interest">
+            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+          </p>
+          <form action="">
+        
+            <label for="name">Your name</label>
+            <input type="text" placeholder="Johnson">
+        
+          <div>
+            <label for="email">Your email</label>
+            <input type="email" placeholder="irungujohnson@ya...">
+          </div>
+          <div>
+            <label for="message">Your message</label>
+            <textarea name="meassage" id="message" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
+          </div>
+          </form>
+
+        <button class="collaboration">Start collaboration</button>
+
+      </section>
+    </div>
+    </section>
     </main>
+
+    <footer class="footer">
+          <div class="social">
+            <button class="get-resume">
+              <p>Get my resume</p>
+            </button>
+
+            <ul class="social-icons">
+              <li>
+                <a href="#">
+                  <img src="icons/ic_stackoverflow.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="icons/ic_github.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="icons/ic_twitter.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="icons/ic_linkedin.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="icons/ic_medium.png">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="icons/ic_angellist.png">
+                </a>
+              </li>
+            </ul> 
+          </div>
+    </footer>
   </body>
 </html>
