update my html and css

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       <section class="about-me-container">
         <div>
-          <h1 class="heading2">
+          <h1>
             About
           </h1>
           <p class="description">
@@ -154,9 +154,11 @@
             Get my CV
           </button>
         </div>
+
+
       <article class="knowledge-container">
         <div class="language">
-          <h3>Languages</h3>
+          <h3 class="know-h3">Languages</h3>
           <ul>
             <li>
               JavaScript (ES5/ES6)
@@ -174,7 +176,7 @@
         </div>
 
         <div class="frameworks">
-          <h3>Frameworks</h3>
+          <h3 class="know-h3">Frameworks</h3>
           <ul>
             <li>
               React.js
@@ -192,7 +194,7 @@
         </div>
 
         <div class="skills">
-          <h3>Skills</h3>
+          <h3 class="know-h3">Skills</h3>
           <ul>
             <li>
               Database Management
@@ -213,12 +215,12 @@
         </div>
       </article>
       <section class="contact-me">
-          <h1 class="getstarted">
+        <h1 class="getstarted">
             Get started
-          </h1>
-          <p class="interest">
-            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
-          </p>
+        </h1>
+        <p class="interest">
+          I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+        </p>
           <form action="">
         
             <label for="name">Your name</label>
