Add portfolio icons, Modify index.html and style.css.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div class="menu-burger">
-          <img src="icons/ic_menu.svg">
+          <img src="icons/ic_menu.png">
         </div>
       </nav>
     </header>
