--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <textarea name="meassage" id="message" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
           </form>
 
-          <button class="collaboration">Start collaboration</button>
+          <button type="button" class="collaboration">Start collaboration</button>
         </div>
 
       </section>
@@ -250,7 +250,7 @@
 
     <footer class="footer">
           <div class="social">
-            <button class="get-resume">
+            <button type="button" class="get-resume">
               <p>Get my resume</p>
             </button>
 
